--- a/decorator-pattern/pom.xml
+++ b/decorator-pattern/pom.xml
@@ -10,6 +10,6 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>singleton-pattern</artifactId>
+	<artifactId>decorator-pattern</artifactId>
 
 </project>
