--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 		<module>singleton-pattern</module>
 		<module>strategy-pattern</module>
 		<module>prototype-pattern</module>
+		<module>decorator-pattern</module>
+		<module>template-method-pattern</module>
+		<module>facade-pattern</module>
 	</modules>
 
 	<properties>
@@ -28,6 +31,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
