--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<lombok.version>1.18.20</lombok.version>
 	</properties>
 
 	<build>
@@ -39,5 +40,18 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencyManagement>
+
+		<dependencies>
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+				<optional>true</optional>
+			</dependency>
+		</dependencies>
+
+	</dependencyManagement>
 
 </project>
