--- a/template-method-pattern/pom.xml
+++ b/template-method-pattern/pom.xml
@@ -12,4 +12,13 @@
 
 	<artifactId>template-method-pattern</artifactId>
 
+	<dependencies>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
+	</dependencies>
+
 </project>
