Adicionado projeto sobre o padrão de projeto: Chain Of Responsability.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>template-method-pattern</module>
 		<module>facade-pattern</module>
 		<module>state-pattern</module>
+		<module>chain-of-responsibility-pattern</module>
 	</modules>
 
 	<properties>
